src/view/tracer/modal/snapshots/nifi_lens__view__tracer__modal__tests__modal_diff_no_differences.snap
---
source: src/view/tracer/modal/mod.rs
assertion_line: 338
expression: terminal.backend().buffer()
---
Buffer {
    area: Rect { x: 0, y: 0, width: 100, height: 20 },
    content: [
        "┏ Content · UpdateAttribute-enrich · event 8471293 · DROP ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓",
        "┃at    2026-04-22T13:42:18.231   pg healthy-pipeline/enrich                                        ┃",
        "┃sizes in 2.3 KiB → out 2.7 KiB  (+400 B)                                                          ┃",
        "┃mime  in application/json · out application/json  ⊘ no differences                                ┃",
        "┃                                                                                                  ┃",
        "┃   Input     Output     Diff · no differences                                                     ┃",
        "┃                                                                                                  ┃",
        "┃   1 │ {"orderId":"A-1029",                                                                       ┃",
        "┃   2 │   "total":329.99,                                                                          ┃",
        "┃   3 │   "tax":30.99}                                                                             ┃",
        "┃                                                                                                  ┃",
        "┃                                                                                                  ┃",
        "┃                                                                                                  ┃",
        "┃                                                                                                  ┃",
        "┃                                                                                                  ┃",
        "┃                                                                                                  ┃",
        "┃loaded 47 B (complete)                                                                            ┃",
        "┃                                                                                                  ┃",
        "┃[Tab] switch · [/] find · [c] copy · [s] save · [Esc] close                                       ┃",
        "┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛",
    ],
    styles: [
        x: 0, y: 0, fg: Cyan, bg: Reset, underline: Reset, modifier: BOLD,
        x: 1, y: 1, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 59, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 99, y: 1, fg: Cyan, bg: Reset, underline: Reset, modifier: BOLD,
        x: 1, y: 2, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 41, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 99, y: 2, fg: Cyan, bg: Reset, underline: Reset, modifier: BOLD,
        x: 1, y: 3, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 67, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 99, y: 3, fg: Cyan, bg: Reset, underline: Reset, modifier: BOLD,
        x: 1, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 99, y: 4, fg: Cyan, bg: Reset, underline: Reset, modifier: BOLD,
        x: 1, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 3, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 10, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 13, y: 5, fg: Cyan, bg: Reset, underline: Reset, modifier: BOLD,
        x: 21, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 24, y: 5, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 47, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 99, y: 5, fg: Cyan, bg: Reset, underline: Reset, modifier: BOLD,
        x: 1, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 99, y: 6, fg: Cyan, bg: Reset, underline: Reset, modifier: BOLD,
        x: 1, y: 7, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 8, y: 7, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 99, y: 7, fg: Cyan, bg: Reset, underline: Reset, modifier: BOLD,
        x: 1, y: 8, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 8, y: 8, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 99, y: 8, fg: Cyan, bg: Reset, underline: Reset, modifier: BOLD,
        x: 1, y: 9, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 8, y: 9, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 99, y: 9, fg: Cyan, bg: Reset, underline: Reset, modifier: BOLD,
        x: 1, y: 10, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 99, y: 10, fg: Cyan, bg: Reset, underline: Reset, modifier: BOLD,
        x: 1, y: 11, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 99, y: 11, fg: Cyan, bg: Reset, underline: Reset, modifier: BOLD,
        x: 1, y: 12, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 99, y: 12, fg: Cyan, bg: Reset, underline: Reset, modifier: BOLD,
        x: 1, y: 13, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 99, y: 13, fg: Cyan, bg: Reset, underline: Reset, modifier: BOLD,
        x: 1, y: 14, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 99, y: 14, fg: Cyan, bg: Reset, underline: Reset, modifier: BOLD,
        x: 1, y: 15, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 99, y: 15, fg: Cyan, bg: Reset, underline: Reset, modifier: BOLD,
        x: 1, y: 16, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 23, y: 16, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 99, y: 16, fg: Cyan, bg: Reset, underline: Reset, modifier: BOLD,
        x: 1, y: 17, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 99, y: 17, fg: Cyan, bg: Reset, underline: Reset, modifier: BOLD,
        x: 1, y: 18, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 60, y: 18, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 99, y: 18, fg: Cyan, bg: Reset, underline: Reset, modifier: BOLD,
    ]
}
